tests/compile_fail/message_trait/engine/register.rs
fn a(_: impl ruci::engine::traits::Message) {}
fn b(m: ruci::Register) {
    a(m);
}

fn main() {}